<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addBudgetFragmentContainer">

    <TextView
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_budget_welcome"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="30dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"/>
    
    <EditText
        android:id="@+id/question"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_edit_text_box"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:maxLength="50"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/createAddNewBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        style="@style/button"/>

    <Button

        android:id="@+id/addBudgetFragmentBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>
</LinearLayout>